# PaneStreetWindows

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  package-lock.json  package.json
.claude/: settings.local.json
.github/workflows/: debug-build.yml  debug5.yml  release.yml
cli/: panestreet
docs/: index.html
scripts/: copy-vendor.js
src/: index.html  test.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: auth_manager.rs  cmd_util.rs  config_reader.rs  file_viewer.rs  lib.rs  main.rs  pty_manager.rs  socket_server.rs  status_detector.rs  worktree_manager.rs
src/css/: main.css
src/js/: app.js  config-panels.js  file-viewer.js  terminal.js  tests.js
